<resources>
    <string name="app_name">Submission2Jetpack</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="people">People</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="error_message">Oops There is something Wrong</string>
    <string name="similar_tv_show">Similar Tv Show</string>
    <string name="recommendations">Recommendations</string>
    <string name="season_date_and_episodes">%1$s | %2$s Episodes</string>
    <string name="current_season">Current Season</string>
    <string name="cast_if_null">We don\'t have any cast added to this favoriteItem.</string>
    <string name="response_null_text">Oops There is something Wrong</string>


    <!--  image description  -->
    <string name="to_display_movie_poster_on_detail">To Display Movie Poster on Detail</string>
    <string name="to_display_movie_backdrop_on_movie_detail">To display favoriteItem backdrop on Movie Detail</string>
    <string name="to_display_tv_poster_in_tv_detail">to display tv poster in tv detail</string>
    <string name="to_display_tv_backdrop_to_tv_detail">to display tv backdrop to tv detail</string>
    <string name="to_display_season_image">to display season image</string>
    <string name="to_display_movie_poster">to display favoriteItem poster</string>
    <string name="to_display_tv_show_poster">to display tv show poster</string>
    <string name="response_null_image_description">to display response when there is something wrong when catching data</string>
    <string name="to_display_star">to display star</string>
    <string name="to_display_person_picture">to display person picture</string>
    <string name="favorite">Favorite</string>
    <string name="sorted_by">List is sorted by %1$s first</string>
</resources>