<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/baseColorLighter"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baseColorLighter"
        tools:context=".movies.detail.favoriteItem.DetailMovieActivity">

        <ImageView
            android:id="@+id/img_detail_tv_show"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha="75"
            android:background="@color/baseColorLighter"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/to_display_tv_backdrop_to_tv_detail" />

        <LinearLayout
            android:id="@+id/ln_1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/foreground_movie"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/img_detail_tv_show"
            app:layout_constraintEnd_toEndOf="@+id/img_detail_tv_show"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_detail_tv_show_poster"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:scaleType="fitXY"
                tools:background="@color/colorLightGrey"
                android:contentDescription="@string/to_display_tv_poster_in_tv_detail" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_detail_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorLightGrey"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ln_1"
            tools:text="NAMA FILM" />


        <TextView
            android:id="@+id/tv_genre_detail_tv_show"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorLightGrey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_tv_show"
            tools:text="Genre Film" />

        <TextView
            android:id="@+id/tv_rating_detail_tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/rating"
            android:textColor="@color/colorLightGrey"
            app:layout_constraintBottom_toBottomOf="@+id/tv_genre_detail_tv_show"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_genre_detail_tv_show"
            app:layout_constraintEnd_toStartOf="@+id/tv_rating_detail_tv_show"
            android:contentDescription="@string/to_display_star" />

        <TextView
            android:id="@+id/tv_detail_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:paddingEnd="16dp"
            android:text="@string/synopsis"
            android:textColor="@color/colorLightGrey"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre_detail_tv_show" />

        <TextView
            android:id="@+id/tv_description_detail_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="5dp"
            android:paddingEnd="16dp"
            android:text="@string/synopsis"
            android:textColor="@color/colorLightGrey"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_1" />

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:paddingEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/colorLightGrey"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_detail_tv_show" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

        <TextView
            android:id="@+id/tv_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/current_season"
            android:textColor="@color/colorLightGrey"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/rv_cast_tv_show" />

        <RelativeLayout
            android:id="@+id/rl_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_season"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_season">

            <ImageView
                android:id="@+id/img_cover_season"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/to_display_season_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/img_cover_season"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_current_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Season 4" />

                <TextView
                    android:id="@+id/tv_season_total_episodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorLightGrey"
                    android:textSize="12sp"
                    tools:text="@string/season_date_and_episodes" />

                <TextView
                    android:id="@+id/tv_season_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorLightGrey"
                    tools:text="Season 4" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_similar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:paddingEnd="16dp"
            android:text="@string/similar_tv_show"
            android:textColor="@color/colorLightGrey"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/rl_season" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_similar" />

        <TextView
            android:id="@+id/tv_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:paddingEnd="16dp"
            android:text="@string/recommendations"
            android:textColor="@color/colorLightGrey"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/rv_similar_tv_show" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommended_tv_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_recommended" />

        <ProgressBar
            android:id="@+id/tv_show_progressbar"
            android:layout_width="227dp"
            android:layout_height="169dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_tv_fav"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@+id/img_detail_tv_show"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

